build/tmp/compileFrcUserProgramReleaseExecutableFrcUserProgramCpp/output.txt
See file:///C:/Wave2826/ChargedUp2023/build/tmp/compileFrcUserProgramReleaseExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramReleaseExecutableFrcUserProgramCpp.
compiling AutoBalance.cpp successful.

compiling DriveHeading.cpp successful.

compiling ScoreConeMid.cpp successful.

compiling SequentialScoreMidCone.cpp successful.

compiling SwerveInitializeCommand.cpp successful.

compiling SequentialScoreTopCone.cpp successful.

compiling EndEffector.cpp failed.
C:\Wave2826\ChargedUp2023\src\main\cpp\subsystems\EndEffector.cpp: In member function 'void EndEffector::Initialize()':
C:\Wave2826\ChargedUp2023\src\main\cpp\subsystems\EndEffector.cpp:79:26: error: 'RobotContainer' has not been declared
   79 |     m_operatorJoystick = RobotContainer::GetInstance()->getOperator();
      |                          ^~~~~~~~~~~~~~

compiling Robot.cpp successful.

compiling Elevator.cpp successful.

compiling RobotContainer.cpp successful.

compiling DriveTimed.cpp successful.

compiling SwerveDrive.cpp successful.

Finished compileFrcUserProgramReleaseExecutableFrcUserProgramCpp, see full log file:///C:/Wave2826/ChargedUp2023/build/tmp/compileFrcUserProgramReleaseExecutableFrcUserProgramCpp/output.txt.
